--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -11,7 +11,8 @@
   <h6><em>Formerly known as James Beeks</em></h6>
   <h3><strong>University of Central Florida</strong> </h3>
 <p><i>Web Developer and Author of HisStory (An American Story)</i></p><br>
- <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. </p>
+ <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <strong>HisStory</strong>(An American story), pending release date.</p>
  <hr size="3" noshade="0">
+  
 </body>
 </html>
