--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -13,6 +13,6 @@
 <p><i>Web Developer, poet, and Author of HisStory (An American Story)</i></p><br>
  <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <strong>HisStory</strong>(An American story), pending release date.</p>
  <hr size="3" noshade="0">
-  
+  <h2>Education</h2>
 </body>
 </html>
