--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -10,9 +10,10 @@
   <H1>James Justis</H1>
   <h6><em>Formerly known as James Beeks</em></h6>
   <h3><strong>University of Central Florida</strong> </h3>
-<p><i>Web Developer, poet, and Author of HisStory (An American Story)</i></p><br>
- <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <strong>HisStory</strong>(An American story), pending release date.</p>
+<p><i>Web Developer, poet, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
+ <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p>
  <hr size="3" noshade="0">
   <h2>Education</h2>
+  <p>Douglas Anderson School of the Arts</p>
 </body>
 </html>
