Added bulluet points

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -14,6 +14,12 @@
  <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p>
  <hr size="3" noshade="0">
   <h3>Education</h3>
-  <p>Douglas Anderson School of the Arts</p>
+  <ul>
+      <li>The Complete Web Development Bootcamp</li>
+      <li>University Of Central Florida BootCamp</li>
+      <li>Freecode camp Javascript course</li>
+      <li>Academy of Art & Deisgn</li>
+      <li>Douglas Anderson School of the Arts</li>
+  </ul>
 </body>
 </html>
