Added h3 my hobbies

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -21,5 +21,6 @@
       <li>Academy of Art & Deisgn</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
+  <h3>My Hobbies</h3>
 </body>
 </html>
