--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -22,5 +22,12 @@
       <li>Douglas Anderson School of the Arts</li>
   </ul>
   <h3>My Hobbies</h3>
+ <ol>
+     <li>Drawing maps</li>
+     <li>Martial Arts</li>
+     <li>Hiking</li>
+     <li>Cooking</li>
+ </ol>
+
 </body>
 </html>
