Changed img size ht wt

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -7,7 +7,7 @@
     <title>James' Personal Site</title>
 </head>
 <body>
-    <img src="portfolio icon.jpg" alt="Web Developer and Author"/>
+    <img src="portfolio icon.jpg" width="150px" height="150px" alt="Web Developer and Author"/>
   <br>
   <H1>James Justis</H1>
   <h6><em>Formerly known as James Beeks</em></h6>
