--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -7,17 +7,17 @@
     <title>James' Personal Site</title>
 </head>
 <body>
-    <img src="portfolio icon.jpg" width="150px" height="150px" alt="Web Developer and Author"/>
+    <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/>
   <br>
   <H1>James Justis</H1>
   <h6><em>Formerly known as James Beeks</em></h6>
   <h3><strong>University of Central Florida</strong> </h3>
-<p><i>Web Developer, poet, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
+<p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer,</a><a href="https://www.poetry.com/poet/James+T.+Justis">Poet,</a>and Author of <strong>HisStory (An American Story)</strong></i></p><br>
  <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p>
  <hr size="3" noshade="0">
   <h3>Education</h3>
   <ul>
-      <li>The Complete Web Development Bootcamp</li>
+      <li> Udemy-The Complete Web Development Bootcamp</li>
       <li>University Of Central Florida BootCamp</li>
       <li>Freecode camp Javascript course</li>
       <li>Academy of Art & Deisgn</li>
