Changed commas in head

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -12,7 +12,7 @@
   <H1>James Justis</H1>
   <h6><em>Formerly known as James Beeks</em></h6>
   <h3><strong>University of Central Florida</strong> </h3>
-<p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer,</a><a href="https://www.poetry.com/poet/James+T.+Justis">Poet,</a>and Author of <strong>HisStory (An American Story)</strong></i></p><br>
+<p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer</a>, <a href="https://www.poetry.com/poet/James+T.+Justis">Poet</a>, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
  <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on poetry.com and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p>
  <hr size="3" noshade="0">
   <h3>Education</h3>
