--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -10,7 +10,7 @@
     <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/>
   <br>
   <H1>James Justis</H1>
-  <h6><em>Formerly known as James Beeks</em></h6>
+  <p><em>Formerly known as James Beeks</em></p>
   <h3><strong>University of Central Florida</strong> </h3>
 <p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer</a>, <a href="https://www.poetry.com/poet/James+T.+Justis">Poet</a>, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
  <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on <a href="https://www.poetry.com/poet/James+T.+Justis">poetry.com</a> and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p>
