made a correction to spelling in text

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -20,7 +20,7 @@
       <li> Udemy-The Complete Web Development Bootcamp</li>
       <li>University Of Central Florida BootCamp</li>
       <li>Freecode camp Javascript course</li>
-      <li>Academy of Art & Deisgn</li>
+      <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
   <h3>My Hobbies</h3>
