Added href photo to education UCF

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -18,7 +18,7 @@
   <h3>Education</h3>
   <ul>
       <li> Udemy-The Complete Web Development Bootcamp</li>
-      <li>University Of Central Florida BootCamp</li>
+      <li><a href="/HTML-personal site/Coding certificate.png">University Of Central Florida BootCamp Graduate</a> </li>
       <li>Freecode camp Javascript course</li>
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
