added a tag to education section list

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -17,7 +17,7 @@
  <hr size="3" noshade="0">
   <h3>Education</h3>
   <ul>
-      <li> Udemy-The Complete Web Development Bootcamp</li>
+      <li> <a href="https://www.udemy.com/">Udemy-The Complete Web Development Bootcamp</a> </li>
       <li><a href="/HTML-personal site/Coding certificate.png">University Of Central Florida BootCamp Graduate</a> </li>
       <li>Freecode camp Javascript course</li>
       <li>Academy of Art & Design</li>
