--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -23,13 +23,7 @@
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
-  <h3>My Hobbies</h3>
- <ol>
-     <li>Drawing maps</li>
-     <li>Martial Arts</li>
-     <li>Hiking</li>
-     <li>Cooking</li>
- </ol>
+     <a href="hobbies.html">My Hobbies</a>
  <hr size="3" noshade>
  
 
