Added contact page and info

--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h3
+    <h3>My Contacts</h3>
+    <ul>
+        <li>email: jamesthejust@outlook.com</li>
+        <li>www.linkedin.com/jamesthejust</li>
+     </ul>
 </body>
 </html>
