--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -24,6 +24,7 @@
       <li>Douglas Anderson School of the Arts</li>
   </ul>
      <a href="hobbies.html">My Hobbies</a>
+     <a href="contact..html">Contact Me</a>
  <hr size="3" noshade>
  
 
