--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -23,6 +23,17 @@
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
+  <table>
+      <tr>
+          <td>2020</td>
+          <td>University of Central Florida Bootcamp</td>
+     </tr>
+     <tr>
+        <td>2012</td>
+        <td>Academy of Art University</td>
+     </tr>
+  </table>
+  <hr>
      <a href="hobbies.html">My Hobbies</a>
      <a href="contact..html">Contact Me</a>
  <hr size="3" noshade>
