Added work experience on tabled lit

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -23,13 +23,22 @@
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
+  <h3>My Work Experience</h3>
   <table>
+      <tr>
+          <td>2010-present</td>
+          <td>Entertainment Central</td>
+      </tr>
+      <tr>
+          <td>2019-2021</td>
+          <td>Worklight Productions</td>
+      </tr>
       <tr>
           <td>2020</td>
           <td>University of Central Florida Bootcamp</td>
      </tr>
      <tr>
-        <td>2012</td>
+        <td>2011-2012</td>
         <td>Academy of Art University</td>
      </tr>
   </table>
