--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -26,12 +26,12 @@
   <h3>My Work Experience</h3>
   <table>
       <tr>
-          <td>2010-2022</td>
-          <td>Entertainment Central</td>
+          <td>2019-2022</td>
+          <td>Website Maintenence Intern at EC</td>
       </tr>
       <tr>
           <td>2019-2021</td>
-          <td>Worklight Productions</td>
+          <td>Lead performer at Worklight Productions</td>
       </tr>
       
   </table>
