--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -25,15 +25,22 @@
   </ul>
   <h3>My Work Experience</h3>
   <table>
-      <tr>
-          <td>2019-2022</td>
-          <td>Website Maintenence Intern at EC</td>
-      </tr>
-      <tr>
-          <td>2019-2021</td>
-          <td>Lead performer at Worklight Productions</td>
-      </tr>
-      
+      <thead>
+          <tr>
+             <th> Dates</th>
+             <th>Work</th>
+          </tr>
+    </thead>
+      <tbody>
+        <tr>
+            <td>2019-2022</td>
+            <td>Website Maintenence Intern at EC</td>
+        </tr>
+        <tr>
+            <td>2019-2021</td>
+            <td>Lead performance engineer at Worklight Productions</td>
+        </tr>
+      </tbody>
   </table>
   <hr>
      <a href="hobbies.html">My Hobbies</a>
