added a border to table

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -24,7 +24,7 @@
       <li>Douglas Anderson School of the Arts</li>
   </ul>
   <h3>My Work Experience</h3>
-  <table>
+  <table border="2">
       <thead>
           <tr>
              <th> Dates</th>
