--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -7,13 +7,19 @@
     <title>James' Personal Site</title>
 </head>
 <body>
-    <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/>
+    <table cellspacing="20">
+        <tr>
+            <td> <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/></td>
+            <td> <H1>James Justis</H1>
+                <p><em>Formerly known as James Beeks</em></p><h3><strong>University of Central Florida</strong> </h3>
+                <p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer</a>, <a href="https://www.poetry.com/poet/James+T.+Justis">Poet</a>, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
+                 <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on <a href="https://www.poetry.com/poet/James+T.+Justis">poetry.com</a> and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p></td>
+        </tr>
+    </table>
+   
   <br>
-  <H1>James Justis</H1>
-  <p><em>Formerly known as James Beeks</em></p>
-  <h3><strong>University of Central Florida</strong> </h3>
-<p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer</a>, <a href="https://www.poetry.com/poet/James+T.+Justis">Poet</a>, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
- <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on <a href="https://www.poetry.com/poet/James+T.+Justis">poetry.com</a> and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p>
+ 
+  
  <hr size="3" noshade="0">
   <h3>Education</h3>
   <ul>
