Added an hr tag to the page

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -48,7 +48,7 @@
         </tr>
       </tbody>
   </table>
-  <hr>
+  <hr size="3" noshade>
      <a href="hobbies.html">My Hobbies</a>
      <a href="contact..html">Contact Me</a>
  <hr size="3" noshade>
