added an h3 tag to page

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -48,6 +48,8 @@
         </tr>
       </tbody>
   </table>
+  <h3>Skills</h3>
+  
   <hr size="3" noshade>
      <a href="hobbies.html">My Hobbies</a>
      <a href="contact..html">Contact Me</a>
