--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -49,7 +49,28 @@
       </tbody>
   </table>
   <h3>Skills</h3>
+  <table>
+      <tr>
+          <td>Web Development</td>
+          <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+          <td>HTML</td>
+          <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+        <td>Singing</td>
+        <td>⭐⭐⭐⭐⭐</td>
+    </tr>
   
+    
+</table>
+  
+
   <hr size="3" noshade>
      <a href="hobbies.html">My Hobbies</a>
      <a href="contact..html">Contact Me</a>
