--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -49,26 +49,55 @@
       </tbody>
   </table>
   <h3>Skills</h3>
-  <table>
-      <tr>
-          <td>Web Development</td>
-          <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-          <td>HTML</td>
-          <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐⭐⭐⭐⭐</td>
-    </tr>
+
+
+<table>
     <tr>
-        <td>Singing</td>
-        <td>⭐⭐⭐⭐⭐</td>
+        <td>
+            <table>
+                <tr>
+                    <td>Web Development</td>
+                    <td>⭐⭐⭐⭐⭐</td>
+                </tr>
+                <tr>
+                    <td>HTML</td>
+                    <td>⭐⭐⭐⭐⭐</td>
+                </tr>
+                <tr>
+                  <td>CSS</td>
+                  <td>⭐⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                  <td>Singing</td>
+                  <td>⭐⭐⭐⭐⭐</td>
+              </tr>   
+          </table>
+            
+        </td>
+        <td>
+            <table>
+                <tr>
+                    <td>Web Development</td>
+                    <td>⭐⭐⭐⭐⭐</td>
+                </tr>
+                <tr>
+                    <td>HTML</td>
+                    <td>⭐⭐⭐⭐⭐</td>
+                </tr>
+                <tr>
+                  <td>CSS</td>
+                  <td>⭐⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                  <td>Singing</td>
+                  <td>⭐⭐⭐⭐⭐</td>
+              </tr>   
+          </table>
+        </td>
     </tr>
-  
-    
 </table>
+
+
   
 
   <hr size="3" noshade>
