Added more categories to skills with ratings

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -51,13 +51,13 @@
   <h3>Skills</h3>
 
 
-<table>
+<table border="2">
     <tr>
         <td>
             <table>
                 <tr>
                     <td>Web Development</td>
-                    <td>⭐⭐⭐⭐⭐</td>
+                    <td>⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
                     <td>HTML</td>
@@ -68,8 +68,8 @@
                   <td>⭐⭐⭐⭐⭐</td>
               </tr>
               <tr>
-                  <td>Singing</td>
-                  <td>⭐⭐⭐⭐⭐</td>
+                  <td>Javascript</td>
+                  <td>⭐⭐⭐</td>
               </tr>   
           </table>
             
@@ -77,15 +77,15 @@
         <td>
             <table>
                 <tr>
-                    <td>Web Development</td>
-                    <td>⭐⭐⭐⭐⭐</td>
+                    <td>React.js</td>
+                    <td>⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
-                    <td>HTML</td>
-                    <td>⭐⭐⭐⭐⭐</td>
+                    <td>MongoDB</td>
+                    <td>⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
-                  <td>CSS</td>
+                  <td>Cooking</td>
                   <td>⭐⭐⭐⭐⭐</td>
               </tr>
               <tr>
