Changed cellspacing in the skills tables

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -54,7 +54,7 @@
 <table border="2">
     <tr>
         <td>
-            <table>
+            <table cellspacing="10px">
                 <tr>
                     <td>Web Development</td>
                     <td>⭐⭐⭐⭐</td>
@@ -75,7 +75,7 @@
             
         </td>
         <td>
-            <table>
+            <table cellspacing="10px">
                 <tr>
                     <td>React.js</td>
                     <td>⭐⭐⭐⭐</td>
