added horizontal rule before skills

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -48,9 +48,8 @@
         </tr>
       </tbody>
   </table>
+  <hr size="3" noshade="0">
   <h3>Skills</h3>
-
-
 <table border="2">
     <tr>
         <td>
