Added hr before work experience

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -29,6 +29,7 @@
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
+  <hr size="3" noshade="0">
   <h3>My Work Experience</h3>
   <table border="2">
       <thead>
@@ -95,9 +96,6 @@
         </td>
     </tr>
 </table>
-
-
-  
 
   <hr size="3" noshade>
      <a href="hobbies.html">My Hobbies</a>
