--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -12,5 +12,8 @@
         <li>email: jamesthejust@outlook.com</li>
         <li>www.linkedin.com/jamesthejust</li>
      </ul>
+     <form class="" action="index.html" method="post">
+
+     </form>
 </body>
 </html>
