added a submit to the form input

--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -13,6 +13,9 @@
         <li>www.linkedin.com/jamesthejust</li>
      </ul>
      <form class="" action="index.html" method="post">
+          <label>Your name</label>
+          <input type="text" name="" value="">
+          <input type="submit" name="">
 
      </form>
 </body>
