--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -15,6 +15,8 @@
      <form class="" action="index.html" method="post">
           <label>Your name</label>
           <input type="text" name="" value="">
+          <input type="color" name="" value="">
+
           <input type="submit" name="">
 
      </form>
