--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -16,9 +16,9 @@
           <label>Your name</label>
           <input type="text" name="" value="">
           <input type="color" name="" value="">
+          <input type="checkbox" name="" value="">
 
           <input type="submit" name="">
-
      </form>
 </body>
 </html>
