--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -12,6 +12,7 @@
         <li>email: jamesthejust@outlook.com</li>
         <li>www.linkedin.com/jamesthejust</li>
      </ul>
+     <hr size="2" noshade="">
      <form class="" action="index.html" method="post">
           <label>Your name</label>
           <input type="text" name="" value="">
