--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -16,9 +16,10 @@
      <form class="" action="index.html" method="post">
           <label>Your name</label>
           <input type="text" name="" value="">
-          <input type="color" name="" value=""><br>
-          <label>Do you want to sign up to the email list?</label>
-          <input type="checkbox" name="" value="">
+    ><br>
+          <label>Your Email</label>
+          <input type="email" name="" value="">
+          
           <input type="submit" name="">
      </form>
 </body>
