--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -19,7 +19,7 @@
     ><br>
           <label>Your Email</label>
           <input type="email" name="" value="">
-          
+          <label>Your Message</label>
           <input type="submit" name="">
      </form>
 </body>
