--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -20,6 +20,7 @@
           <label>Your Email</label>
           <input type="email" name="" value="">
           <label>Your Message</label>
+          <textarea name="name" rows="10" cols="30"></textarea>
           <input type="submit" name="">
      </form>
 </body>
