added enctype to form

--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -13,7 +13,7 @@
         <li>www.linkedin.com/jamesthejust</li>
      </ul>
      <hr size="2" noshade="">
-     <form class="" action="mailto:jamesthejust@outlook.com" method="post">
+     <form action="mailto:jamesthejust@outlook.com" method="post" enctype="text/plain">
           <label>Your name</label>
           <input type="text" name="" value=""><br>
           <label>Your Email</label>
