correction to the email on form

--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -13,11 +13,11 @@
         <li>www.linkedin.com/jamesthejust</li>
      </ul>
      <hr size="2" noshade="">
-     <form action="mailto:jamesthejust@outlook.com" method="post" enctype="text/plain">
+     <form action="mailto:jamesthejust99@outlook.com" method="post" enctype="text/plain">
           <label>Your name</label>
-          <input type="text" name="" value=""><br>
+          <input type="text" name="" value="yourName"><br>
           <label>Your Email</label>
-          <input type="email" name="" value=""><br>
+          <input type="email" name="" value="yourEmail"><br>
           <label>Your Message</label><br>
           <textarea name="name" rows="10" cols="30"></textarea><br>
           <input type="submit" name="">
