--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -19,7 +19,7 @@
           <label>Your Email</label>
           <input type="email" name="" value="yourEmail"><br>
           <label>Your Message</label><br>
-          <textarea name="name" rows="10" cols="30"></textarea><br>
+          <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
           <input type="submit" name="">
      </form>
 </body>
