--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -15,11 +15,11 @@
      <hr size="2" noshade="">
      <form action="mailto:jamesthejust99@outlook.com" method="post" enctype="text/plain">
           <label>Your name</label>
-          <input type="text" name="" value="yourName"><br>
+          <input type="text" name="" value="Your Name"><br>
           <label>Your Email</label>
-          <input type="email" name="" value="yourEmail"><br>
+          <input type="email" name="" value="Your Email"><br>
           <label>Your Message</label><br>
-          <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+          <textarea name="Your Message" rows="10" cols="30"></textarea><br>
           <input type="submit" name="">
      </form>
 </body>
