--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James' Personal Site</title>
 </head>
-<body>
+<body style="background-color: teal;"></body>>
     <table cellspacing="20">
         <tr>
             <td> <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/></td>
