--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        body {
+            background-color: #EAF6F6;
+        }
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James' Personal Site</title>
 </head>
-<body style="background-color: #EAF6F6;"></body>>
+<body>
     <table cellspacing="20">
         <tr>
             <td> <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/></td>
