added bg and style to hr

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -4,6 +4,10 @@
         body {
             background-color: #EAF6F6;
         }
+        hr {
+            background-color: white;
+            border-style: none;
+        }
     </style>
 <head>
     <meta charset="UTF-8">
