--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -7,6 +7,7 @@
         hr {
             background-color: white;
             border-style: none;
+            height: 2px;
         }
     </style>
 <head>
