--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -6,8 +6,9 @@
         }
         hr {
             background-color: white;
-            border-style: none;
-            height: 2px;
+            border-style: dotted, none, none;
+            height: 0px;
+            width: 30%;
         }
     </style>
 <head>
