changed the stle section to hr

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -5,10 +5,11 @@
             background-color: #EAF6F6;
         }
         hr {
-            background-color: white;
-            border-style: dotted, none, none;
-            height: 0px;
-            width: 30%;
+           border-style: none;
+            border-top-style: dotted;
+            border-color: grey;
+            border-width: 5px;
+            width: 10%;
         }
     </style>
 <head>
@@ -26,12 +27,9 @@
                 <p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer</a>, <a href="https://www.poetry.com/poet/James+T.+Justis">Poet</a>, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
                  <p>I am an iOS and Web Developer. I love coffee and I draw my own maps. I am a published author on <a href="https://www.poetry.com/poet/James+T.+Justis">poetry.com</a> and I am currently writing my first book entitlted <i><strong>HisStory (An American story)</strong></i>, pending release date.</p></td>
         </tr>
-    </table>
-   
-  <br>
- 
-  
- <hr size="3" noshade="0">
+    </table>  
+  <br> 
+ <hr>
   <h3>Education</h3>
   <ul>
       <li> <a href="https://www.udemy.com/">Udemy-The Complete Web Development Bootcamp</a> </li>
@@ -40,7 +38,7 @@
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
   </ul>
-  <hr size="3" noshade="0">
+  <hr>
   <h3>My Work Experience</h3>
   <table border="2">
       <thead>
@@ -60,7 +58,7 @@
         </tr>
       </tbody>
   </table>
-  <hr size="3" noshade="0">
+  <hr>
   <h3>Skills</h3>
 <table border="2">
     <tr>
@@ -108,10 +106,10 @@
     </tr>
 </table>
 
-  <hr size="3" noshade>
+  <hr>
      <a href="hobbies.html">My Hobbies</a>
      <a href="contact..html">Contact Me</a>
- <hr size="3" noshade>
+ <hr>
  
 
 </body>
