Added style to hobbies page

--- a/HTML-personal site/hobbies.html
+++ b/HTML-personal site/hobbies.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
 </head>
+<style>
+    body {
+        background-color: #EAF6F6;
+    }
+    hr {
+       border-style: none;
+        border-top-style: dotted;
+        border-color: grey;
+        border-width: 5px;
+        width: 10%;
+    }
+</style>
 <body>
     <h3>My Hobbies</h3>
     <ol>
@@ -14,5 +26,6 @@
         <li>Hiking</li>
         <li>Cooking</li>
     </ol>
+    
 </body>
 </html>
