--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -19,7 +19,7 @@
     }
 </style>
 <body>
-    <h3>My Contacts</h3>
+    <h3>Contact Me</h3>
     <ul>
         <li>email: jamesthejust@outlook.com</li>
         <li>www.linkedin.com/jamesthejust</li>
