--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James' Personal Site</title>
 </head>
+<link rel="stylesheet" href="styles.css">
 <body>
     <table cellspacing="20">
         <tr>
