--- a/HTML-personal site/hobbies.html
+++ b/HTML-personal site/hobbies.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
 </head>
-
+<link rel="stylesheet" href="styles.css">
 <body>
     <h3>My Hobbies</h3>
     <ol>
