Added coding badge

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="portfolio icon.jpg" width="160px" height="160px" alt="Web Developer and Author"/></td>
+            <td> <img src="portfolio icon.jpg" width="160px" height="160px" alt="Certified Web Developer"/></td>
             <td> <H1>James Justis</H1>
                 <p><em>Formerly known as James Beeks</em></p><h3><strong>University of Central Florida</strong> </h3>
                 <p><i><a href="https://james-portfolio1.herokuapp.com/">Web Developer</a>, <a href="https://www.poetry.com/poet/James+T.+Justis">Poet</a>, and Author of <strong>HisStory (An American Story)</strong></i></p><br>
@@ -100,7 +100,7 @@
      <a href="hobbies.html">My Hobbies</a>
      <a href="contact..html">Contact Me</a>
  <hr>
- 
+<img src="coding badge.jpg" width="50px" height="50px" alt="Certified coder">
 
 </body>
 </html>
