--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -23,7 +23,7 @@
   <h3>Education</h3>
   <ul>
       <li> <a href="https://www.udemy.com/">Udemy-The Complete Web Development Bootcamp</a> </li>
-      <li><a href="/HTML-personal site/Coding certificate.png">University Of Central Florida BootCamp Graduate</a> </li>
+      <li><a href="Coding certificate.png">University Of Central Florida BootCamp Graduate</a> </li>
       <li>Freecode camp Javascript course</li>
       <li>Academy of Art & Design</li>
       <li>Douglas Anderson School of the Arts</li>
