--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -16,7 +16,26 @@
   <section id="title">
 
     <!-- Nav Bar -->
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleDemo2" aria-controls="navbarToggleDemo2" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarToggleDemo2">
+  <a class="navbar-brand" href="">tindog</a>
+  <ul class="navbar-nav" ms-auto>
+    <li class="nav-item"></li>
+    <a class="nav-link" href="">Contact</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="">Pricing</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="">Download</a>
+</li>
+  </ul>
+</div>
+</div>
+</div>
 
 
 
