--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -9,6 +9,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -16,40 +17,47 @@
   <section id="title">
 
     <!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="">tindog</a>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+
+    <a class="navbar-brand" href="">tindog</a>
+
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleDemo2" aria-controls="navbarToggleDemo2" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  
   <div class="collapse navbar-collapse" id="navbarToggleDemo2">
+
   <ul class="navbar-nav" ms-auto>
-    <li class="nav-item"></li>
+    <li class="nav-item">
     <a class="nav-link" href="">Contact</a>
-</li>
-<li class="nav-item">
-  <a class="nav-link" href="">Pricing</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="">Download</a>
-</li>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link" href="">Pricing</a>
+      </li>
+      <li class="nav-item">
+    <a class="nav-link" href="">Download</a>
+    </li>
   </ul>
 </div>
 </div>
 </div>
+</nav>
 
 
 
     <!-- Title -->
 
-    <div>
+   <div class="row">
+
+      <div class="col-lg-6">
       <h1>Meet new and interesting dogs nearby.</h1>
       <button type="button">Download</button>
       <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
-
+     </div>
+      <div class="col-lg-6">
+        <img src="images/iphone6.png" alt="iphone-mockup">
+      </div>
+  </div>
   </section>
 
 
