ms-auto in navbar

--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -27,7 +27,7 @@
   
   <div class="collapse navbar-collapse" id="navbarToggleDemo2">
 
-  <ul class="navbar-nav" ms-auto>
+  <ul class="navbar-nav ms-auto">
     <li class="nav-item">
     <a class="nav-link" href="">Contact</a>
      </li>
