--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -40,7 +40,7 @@
       <tbody>
         <tr>
             <td>2019-2022</td>
-            <td>Website Maintenence Intern at EC</td>
+            <td>Jr. Web Developer & Intern at EC</td>
         </tr>
         <tr>
             <td>2019-2021</td>
