--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <section id="title">
-
+   <div class="'container-fluid">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -60,6 +60,7 @@
         <img src="images/iphone6.png" alt="iphone-mockup">
       </div>
   </div>
+</div>
   </section>
 
 
