--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -5,64 +5,70 @@
   <meta charset="utf-8">
   <title>TinDog</title>
   <!--Google Fonts-->
- <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
- <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<!-- Font Awesome -->
-<script src="https://kit.fontawesome.com/a98ff29110.js" crossorigin="anonymous"></script>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/a98ff29110.js" crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
 
   <section id="title">
-   <div class="'container-fluid">
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="'container-fluid">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
 
-    <a class="navbar-brand" href="">tindog</a>
+        <a class="navbar-brand" href="">tindog</a>
 
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleDemo2" aria-controls="navbarToggleDemo2" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  <div class="collapse navbar-collapse" id="navbarToggleDemo2">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleDemo2"
+          aria-controls="navbarToggleDemo2" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <ul class="navbar-nav ms-auto">
-    <li class="nav-item">
-    <a class="nav-link" href="">Contact</a>
-     </li>
-     <li class="nav-item">
-      <a class="nav-link" href="">Pricing</a>
-      </li>
-      <li class="nav-item">
-    <a class="nav-link" href="">Download</a>
-    </li>
-  </ul>
-</div>
-</div>
-</div>
-</nav>
+        <div class="collapse navbar-collapse" id="navbarToggleDemo2">
+
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Download</a>
+            </li>
+          </ul>
+        </div>
+    </div>
+    </div>
+    </nav>
 
 
 
     <!-- Title -->
 
-   <div class="row">
+    <div class="row">
 
       <div class="col-lg-6">
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button" class="btn btn-dark" type="button btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
-     </div>
+        <h1>Meet new and interesting dogs nearby.</h1>
+        <button type="button" class="btn btn-dark" type="button btn-lg"><i class="fa-brands fa-apple"></i>
+          Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i>
+          Download</button>
+      </div>
       <div class="col-lg-6">
         <img src="images/iphone6.png" alt="iphone-mockup">
       </div>
-  </div>
-</div>
+    </div>
+    </div>
   </section>
 
 
