--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -65,7 +65,7 @@
           Download</button>
       </div>
       <div class="col-lg-6">
-        <img src="images/iphone6.png" alt="iphone-mockup">
+        <img class="title-image"src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
     </div>
