aded check to class to id

--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -76,7 +76,7 @@
 
   <section id="features">
 
-    <h3><i class="fa-solid fa-circle-check"></i> Easy to use.</h3>
+    <h3><i class="fa-solid fa-circle-check circle-check"></i> Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
 
     <h3>Elite Clientele</h3>
