--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -79,7 +79,7 @@
     <h3><i class="fa-solid fa-circle-check circle-check"></i> Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
 
-    <h3>Elite Clientele</h3>
+    <h3><i class="fa-solid fa-bullseye bulleye"></i>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
 
     <h3>Guaranteed to work.</h3>
