added cloumns and rows to features to display

--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -76,15 +76,22 @@
 
   <section id="features">
 
+    <div class="row">
+    <div class="feature-box col-lg-4 ">
     <h3><i class="fa-solid fa-circle-check circle-check"></i> Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
+    </div>
 
+    <div class="feature-box col-lg-4">
     <h3><i class="fa-solid fa-bullseye bullseye"></i>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
+  </div>
 
+  <div class="feature-box col-lg-4">
     <h3><i class="fa-solid fa-heart heart"></i>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
-
+</div>
+</div>
   </section>
 
 
