--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -61,11 +61,12 @@
         <h1>Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>
           Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>
+        <button type="button" class="btn btn-outline-light btn-lg download-button"><i
+            class="fa-brands fa-google-play"></i>
           Download</button>
       </div>
       <div class="col-lg-6">
-        <img class="title-image"src="images/iphone6.png" alt="iphone-mockup">
+        <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
     </div>
@@ -77,61 +78,55 @@
   <section id="features">
 
     <div class="row">
-    <div class="feature-box col-lg-4 ">
-      <i class="fa-solid fa-circle-check circle-check fa-4x"></i>
-    <h3></i> Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="feature-box col-lg-4 ">
+        <i class="fa-solid fa-circle-check circle-check fa-4x"></i>
+        <h3></i> Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+
+      <div class="feature-box col-lg-4">
+        <i class="fa-solid fa-bullseye bullseye fa-4x"></i>
+        <h3></i>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+
+      <div class="feature-box col-lg-4 ">
+        <i class="fa-solid fa-heart heart fa-4x"></i>
+        <h3></i>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
     </div>
-
-    <div class="feature-box col-lg-4">
-      <i class="fa-solid fa-bullseye bullseye fa-4x"></i>
-    <h3></i>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-  </div>
-
-  <div class="feature-box col-lg-4 ">
-    <i class="fa-solid fa-heart heart fa-4x"></i>
-    <h3></i>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-</div>
-</div>
   </section>
 
 
   <!-- Testimonials -->
 
   <section id="testimonials">
+
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false" data-interval="1000" data.pause="hover">
       <div class="carousel-inner">
-        <div class="carousel-item active" style="background-color: red;">
-          <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item" style="background-color: blue;">
-          <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+            their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
         </div>
-        <div class="carousel-item" style="background-color: yellow;">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-      </div>
-       <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-       
-      </button>
-    </div>
-            </div>
-  
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img class="testimonial-image"src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
 
-    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
       </div>
+    </div>
+    </div>
     </div>
   </section>
 
