--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -178,7 +178,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-1">
+      <div class="col-lg-4 col-md-12">
         <div class="card">
           <div class="card-header ">
             <h3>Mastiff</h3>
