--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -150,7 +150,7 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-      <div class="col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6">
         <div class="card ">
           <div class="card-header">
             <h3>Chihuahua</h3>
@@ -164,7 +164,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
             <h3>Labrador</h3>
@@ -178,7 +178,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12">
+      <div class="pricing-column col-lg-4 col-md-12">
         <div class="card">
           <div class="card-header ">
             <h3>Mastiff</h3>
