--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -203,7 +203,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="foot">Find the True Love of Your Dog's Life Today.</h3>
     <button  class="btn btn-dark btn-lg download-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i
       class="fa-brands fa-google-play"></i> Download</button>
