added social icons

--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -216,7 +216,12 @@
   <footer id="footer">
 
     <p>© Copyright TinDog</p>
-    <i class="fa-brands fa-facebook"></i>
+    <i class="icon fa-brands fa-facebook"></i>
+    <i class="icon fa-brands fa-twitter"></i>
+    <i class="icon fa-brands fa-instagram-square"></i>
+    <i class="icon fa-brands fa-youtube"></i>
+    <i class="icon fa-solid fa-envelope"></i>
+
   </footer>
 
 
