changed contact info in contact html

--- a/HTML-personal site/contact..html
+++ b/HTML-personal site/contact..html
@@ -10,8 +10,8 @@
 <body>
     <h3>Contact Me</h3>
     <ul>
-        <li>email: jamesthejust@outlook.com</li>
-        <li>www.linkedin.com/jamesthejust</li>
+        <li>email: justiscode@outlook.com</li>
+        <li>www.linkedin.com/justiscode</li>
      </ul>
      <hr>
      <form action="mailto:jamesthejust99@outlook.com" method="post" enctype="text/plain">
